# helos-face

./: Dockerfile  app.py  face_recognition_utils.py  main.py  packages.txt  pyproject.toml  requirements.txt
faces/: adikol_data.npy  galnaaman_data.npy
