[tool.poetry]
name = "helos-face-detector"
version = "0.1.0"
description = ""
authors = ["galnaaman <85794518+galnaaman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
streamlit = "^1.34.0"
opencv-python = "^4.9.0.80"
face-recognition = "^1.3.0"
cmake = "^3.21.3"
dlib = "^19.22.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
